ingress/nginx.ingress.auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://httpbin.org/basic-auth/user/passwd
  creationTimestamp: 2016-10-03T13:50:35Z
  generation: 1
  name: external-auth
  resourceVersion: "2068378"
  selfLink: /apis/networking/v1/namespaces/default/ingresses/external-auth
  uid: 5c388f1d-8970-11e6-9004-080027d2dc94
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pay(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: svc-soa-payment
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: svc-soa-main
            port:
              number: 80
